# SVMproject

./: .gitignore  .gitmessage  README.md  REPORT.md  best_model_hyperparameters.json  pyproject.toml  telco_churn_ml.ipynb
