[project]
name = "telco-churn-ml"
version = "1.0.0"
description = "Projet ML - Classification du churn client Telco avec comparaison de modèles et interprétabilité"
readme = "REPORT.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "shap>=0.43.0",
    "lime>=0.2.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
]
